efk/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector: 
    app: kibana
  type: LoadBalancer  
  ports:
    - port: 8080
      targetPort: 5601
